# legendarySpoon

./: CMakeLists.txt  Image.cpp  Image.h  ImagePGM.cpp  ImagePGM.h  ImagePPM.cpp  ImagePPM.h  ImageTemplate.h  Pixel.cpp  Pixel.h  PixelPGM.cpp  PixelPGM.h  PixelPPM.cpp  PixelPPM.h  main.cpp
